# ainakan-rust

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: build.yml
ainakan/: Cargo.toml  README.md
ainakan-build/: Cargo.toml
ainakan-build/src/: lib.rs
ainakan-gum/: Cargo.toml  README.md
ainakan-gum-sys/: .gitignore  Cargo.toml  build.rs  event_sink.h  invocation_listener.h  probe_listener.h  stalker_observer.h  stalker_params.h
ainakan-gum-sys/src/: lib.rs
ainakan-gum/src/: backtracer.rs  cpu_context.rs  debug_symbol.rs  error.rs  instruction_writer.rs  interceptor.rs  lib.rs  memory_access_monitor.rs  memory_range.rs  module.rs  module_map.rs  process.rs  range_details.rs  stalker.rs  thread.rs
ainakan-gum/src/instruction_writer/aarch64/: branch.rs  index.rs  register.rs  relocator.rs  writer.rs
ainakan-gum/src/instruction_writer/arm/: register.rs  writer.rs
ainakan-gum/src/instruction_writer/x86_64/: branch.rs  register.rs  relocator.rs  writer.rs
ainakan-gum/src/interceptor/: invocation_listener.rs
ainakan-gum/src/script/: backend.rs  context.rs  data.rs  scheduler.rs
ainakan-gum/src/stalker/: event_sink.rs  observer.rs  transformer.rs
ainakan-sys/: .gitignore  Cargo.toml  build.rs
ainakan-sys/src/: lib.rs
ainakan/src/: device.rs  device_manager.rs  error.rs  injector.rs  lib.rs  process.rs  script.rs  session.rs  variant.rs
examples/core/console_log/: Cargo.toml
examples/core/console_log/src/: main.rs
examples/core/get_processes/: Cargo.toml
examples/core/get_processes/src/: main.rs
examples/core/hello/: Cargo.toml
examples/core/hello/src/: main.rs
examples/core/inject_lib_blob/: Cargo.toml
examples/core/inject_lib_blob/src/: main.rs
examples/core/inject_lib_file/: Cargo.toml
examples/core/inject_lib_file/src/: main.rs
examples/core/list_exports/: Cargo.toml  README.md
examples/core/list_exports/src/: main.rs
examples/core/rpc_execute_function/: Cargo.toml  README.md
examples/core/rpc_execute_function/src/: main.rs
examples/core/usb_device/: Cargo.toml
examples/core/usb_device/src/: main.rs
examples/gum/debug_symbol/: Cargo.toml
examples/gum/debug_symbol/src/: main.rs
examples/gum/fast_interceptor/: Cargo.toml  README.md
examples/gum/fast_interceptor/src/: main.rs
examples/gum/hook_instruction/: Cargo.toml
examples/gum/hook_instruction/src/: lib.rs
examples/gum/hook_open/: Cargo.toml  README.md
examples/gum/hook_open/src/: lib.rs
examples/gum/linux_no_std/: Cargo.toml  build.rs
examples/gum/linux_no_std/src/: main.rs
examples/gum/memory_access_monitor/: Cargo.toml
examples/gum/memory_access_monitor/src/: main.rs
examples/gum/open/: Cargo.toml  inject.js  package.json
examples/gum/open/src/: lib.rs
examples/gum/script/: Cargo.toml
examples/gum/script/src/: main.rs
examples/gum/stalker/: Cargo.toml
examples/gum/stalker/src/: main.rs
examples/gum/stalker_observer/: Cargo.toml
examples/gum/stalker_observer/src/: main.rs
