[workspace]
resolver = "2"
members = [
    "ainakan-gum-sys",
    "ainakan-gum",
    "ainakan-sys",
    "ainakan",
    "examples/core/*",
    "examples/gum/*",
]
# We miss our linux_no_std example from the default members since `cargo check`
# and `cargo test` both attempt to link the `std` library into it in error.
default-members = ["ainakan-gum-sys", "ainakan-gum", "ainakan-sys", "ainakan"]

[workspace.package]
version = "0.17.0"
authors = [
    "Keegan Saunders <keegan@undefinedbehaviour.org>",
    "Shmarya Rubenstein <github@shmarya.net>",
]
edition = "2021"
license = "wxWindows"
repository = "https://github.com/ainakan/ainakan-rust"
description = "Rust bindings for Ainakan"
