[package]
name = "ainakan-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
auto-download = ["ainakan-build"]

[build-dependencies]
bindgen = "0.71.1"
ainakan-build = { path = "../ainakan-build", optional = true, version = "0.17.0" }

[badges]
maintenance = { status = "experimental" }
