[package]
name = "monitor-memory-access"
version = "0.1.0"
authors = ["Liu Xiangru <liuxiangru@iie.ac.cn>"]
edition = "2021"
license = "MIT"
description = "Example of monitoring memory access using Ainakan's MemoryAccessMonitor API"
publish = false

[dependencies]
ainakan-gum = { path = "../../../ainakan-gum", features = [
    "memory-access-monitor",
] }
