[package]
name = "script"
version = "0.1.0"
authors = ["WorksButNotTested"]
edition = "2018"
license = "wxWindows"
publish = false

[[bin]]
name = "script"

[features]
auto-download = ["ainakan-gum/auto-download"]

[dependencies]
ainakan-gum = { path = "../../../ainakan-gum", features = ["script"] }
lazy_static = "1.4"
