[package]
name = "stalker"
version = "0.1.0"
authors = ["meme <meme@users.noreply.github.com>"]
edition = "2018"
license = "wxWindows"
publish = false

[dependencies]
ainakan-gum = { path = "../../../ainakan-gum", features = [
    "event-sink",
    "invocation-listener",
] }
ainakan-gum-sys = { path = "../../../ainakan-gum-sys" }
lazy_static = "1.4"
